# ev

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.org
gtest/: CMakeLists.txt
gtest/include/gtest/: gtest.h
lib/: anim.lua  app.lua  body.lua  ev.lua  font.lua  graphics.lua  list.lua  matrix4.lua  particle.lua  render_texture.lua  sbatch.lua  sprite.lua  stage.lua  texture.lua  tween.lua  utils.lua  vec2.lua  wait.lua  world.lua
modules/: FindLuaJIT.cmake  FindSDL2.cmake  FindSDL2_image.cmake
script/: lua_test
spec/: list_spec.lua  utils_spec.lua  vec2_spec.lua
src/: CMakeLists.txt  animation.c  animation.cpp  animation.h  application.c  application.cpp  application.h  array_list.c  array_list.h  debug_draw.cpp  debug_draw.h  ev.h  ev_box2d.cpp  ev_box2d.h  ev_lua.h  evil.h  font.c  font.h  graphics.c  graphics.h  lua.c  main.c  main.cpp  matrix4.c  matrix4.cpp  matrix4.h  quad_tree.c  quad_tree.h  rect.c  rect.h  render_texture.c  render_texture.h  shader.c  shader.cpp  shader.h  sprite.c  sprite.cpp  sprite.h  sprite_batch.c  sprite_batch.cpp  (+18 more)
test/: CMakeLists.txt  animation_test.c  animation_test.cpp  arraylist_test.c  matrix4_test.c  qtree_test.c  test_helper.h  testgtest.cpp
test_app/: bats.json  desert.json  flappybird.json  flappybird.lua  test_app.c  test_app.cpp  test_app.lua
tools/: embedfile.c
